[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/panels/panel_outside.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=3]
[ext_resource path="res://content/shared/difficulty/DifficultyBadge.tscn" type="PackedScene" id=4]
[ext_resource path="res://stages/loadout/RelichuntPopup.gd" type="Script" id=5]
[ext_resource path="res://content/shared/difficulty/DifficultyBadge.gd" type="Script" id=6]
[ext_resource path="res://content/icons/loadout_diff1.png" type="Texture" id=7]
[ext_resource path="res://content/shared/difficulty/skull_difficulties_panel.png" type="Texture" id=8]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[node name="RelichuntPopup" type="CenterContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 928.0
margin_top = 508.0
margin_right = 992.0
margin_bottom = 572.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1252.0
margin_bottom = 1034.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1204.0
margin_bottom = 986.0

[node name="PanelTitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1188.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "loadout.difficulty.title"
align = 1

[node name="DifficultyIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer" groups=["unstyled"]]
margin_top = 81.0
margin_right = 1188.0
margin_bottom = 241.0
rect_min_size = Vector2( 280, 160 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 257.0
margin_right = 1188.0
margin_bottom = 314.0

[node name="DifficultyButton4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 313.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "loadout.difficulty.veryeasy"

[node name="DifficultyButton1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 329.0
margin_right = 594.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "loadout.difficulty.easy"

[node name="DifficultyButton2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 610.0
margin_right = 907.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "loadout.difficulty.medium"

[node name="DifficultyButton3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 923.0
margin_right = 1188.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 3 )
text = "loadout.difficulty.hard"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 330.0
margin_right = 1188.0
margin_bottom = 414.0
alignment = 1

[node name="EasierButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 315.0
margin_top = 13.0
margin_right = 495.0
margin_bottom = 70.0
size_flags_vertical = 4
text = "loadout.easier"

[node name="DifficultyBadge" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4" groups=["unstyled"] instance=ExtResource( 4 )]
margin_left = 511.0
margin_right = 669.0
margin_bottom = 84.0
rect_min_size = Vector2( 158, 84 )
texture = ExtResource( 8 )
expand = true
script = ExtResource( 6 )

[node name="HarderButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 685.0
margin_top = 13.0
margin_right = 873.0
margin_bottom = 70.0
size_flags_vertical = 4
text = "loadout.harder"

[node name="DifficultyExplanationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 1188.0
margin_bottom = 355.0
rect_min_size = Vector2( 500, 0 )
align = 1
autowrap = true

[node name="MapSizeBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 371.0
margin_right = 1188.0
margin_bottom = 549.0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox"]
margin_right = 1188.0
margin_bottom = 24.0

[node name="PanelTitleLabel3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox"]
margin_top = 40.0
margin_right = 1188.0
margin_bottom = 105.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "loadout.mapsize.title"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox"]
margin_top = 121.0
margin_right = 1188.0
margin_bottom = 178.0

[node name="MapSizeButton1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3"]
margin_right = 284.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 4 )
text = "loadout.mapsize.small"

[node name="MapSizeButton2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3"]
margin_left = 300.0
margin_right = 588.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 4 )
text = "loadout.mapsize.medium"

[node name="MapSizeButton3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3"]
margin_left = 604.0
margin_right = 888.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 4 )
text = "loadout.mapsize.large"

[node name="MapSizeButton4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3"]
margin_left = 904.0
margin_right = 1188.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 4 )
text = "loadout.mapsize.huge"

[node name="MapSizeExplanationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox"]
visible = false
margin_top = 194.0
margin_right = 1188.0
margin_bottom = 219.0
rect_min_size = Vector2( 500, 0 )
align = 1
autowrap = true

[node name="ModifiersBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 565.0
margin_right = 1188.0
margin_bottom = 857.0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox"]
margin_right = 1188.0
margin_bottom = 24.0

[node name="PanelTitleLabel3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox"]
margin_top = 40.0
margin_right = 1188.0
margin_bottom = 105.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "loadout.relichunt.modifiers"
align = 1

[node name="HBoxContainer3" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox"]
margin_top = 121.0
margin_right = 1188.0
margin_bottom = 251.0
columns = 2

[node name="ModHyperactiveButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3"]
margin_right = 586.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "loadout.mode.hyperactive"
align = 1

[node name="ModLongTimeButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3"]
margin_left = 602.0
margin_right = 1188.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "loadout.mode.longtime"
align = 1

[node name="ModMazeButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3"]
margin_top = 73.0
margin_right = 586.0
margin_bottom = 130.0
size_flags_horizontal = 3
text = "loadout.mode.maze"
align = 1

[node name="ModDoubleIronButton" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3"]
margin_left = 602.0
margin_top = 73.0
margin_right = 1188.0
margin_bottom = 130.0
size_flags_horizontal = 3
text = "loadout.mode.doubleiron"
align = 1

[node name="ModifierExplanationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox"]
margin_top = 267.0
margin_right = 1188.0
margin_bottom = 292.0
rect_min_size = Vector2( 500, 0 )
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 873.0
margin_right = 1188.0
margin_bottom = 897.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 913.0
margin_right = 1188.0
margin_bottom = 970.0

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 586.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "loadout.secondstage.cancel"

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 602.0
margin_right = 1188.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "loadout.secondstage.start"

[node name="Control" type="Control" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="HintPopup" type="PanelContainer" parent="Control"]
margin_left = 184.0
margin_top = -127.0
margin_right = 585.0
margin_bottom = -46.0

[node name="MarginContainer" type="MarginContainer" parent="Control/HintPopup"]
margin_left = 12.0
margin_top = 12.0
margin_right = 389.0
margin_bottom = 69.0

[node name="HintLabel" type="Label" parent="Control/HintPopup/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 361.0
margin_bottom = 41.0
text = "pause.quit.popup"
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DifficultyButton4" to="." method="_on_DifficultyButton4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DifficultyButton1" to="." method="_on_DifficultyButton1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DifficultyButton2" to="." method="_on_DifficultyButton2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DifficultyButton3" to="." method="_on_DifficultyButton3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/EasierButton" to="." method="_on_EasierButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/HarderButton" to="." method="_on_HarderButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3/MapSizeButton1" to="." method="_on_MapSizeButton1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3/MapSizeButton2" to="." method="_on_MapSizeButton2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3/MapSizeButton3" to="." method="_on_MapSizeButton3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSizeBox/HBoxContainer3/MapSizeButton4" to="." method="_on_MapSizeButton4_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3/ModHyperactiveButton" to="." method="_on_ModHyperactiveButton_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3/ModLongTimeButton" to="." method="_on_ModLongTimeButton_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3/ModMazeButton" to="." method="_on_ModMazeButton_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ModifiersBox/HBoxContainer3/ModDoubleIronButton" to="." method="_on_ModDoubleIronButton_toggled"]
